--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@iconify/react": "^5.0.2",
     "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-alert-dialog": "^1.0.4",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
@@ -48,12 +48,13 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@tanstack/react-query": "^5.62.3",
     "@tanstack/react-query-devtools": "^5.62.3",
-    "@tanstack/react-table": "^8.20.5",
+    "@tanstack/react-table": "^8.20.6",
     "antd": "^5.22.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "framer-motion": "^11.13.5",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
@@ -63,6 +64,8 @@
     "next-auth": "^4.24.11",
     "next-intl": "^3.26.0",
     "next-themes": "^0.4.4",
+    "nuqs": "^2.2.3",
+    "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-day-picker": "^9.4.2",
     "react-dom": "^19.0.0",
